--- a/GetWebXML/GetWebXML/GetWebXML/GetWebXML/View/Columnview.xaml
+++ b/GetWebXML/GetWebXML/GetWebXML/GetWebXML/View/Columnview.xaml
@@ -16,7 +16,7 @@
 
     <!--LayoutRoot 是包含所有页面内容的根网格-->
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent" Margin="0,10,0,0">
+        <Grid x:Name="LayoutRoot" Background="Transparent" Margin="0,10,0,0">
         <vc:Chart xmlns:vc="clr-namespace:Visifire.Charts;assembly=SLWpVisifire.Charts"
                   Padding="2,2,2,0" BorderThickness="0" LightingEnabled="False">
 
@@ -24,7 +24,7 @@
                 <vc:Title Text="Athens 2004 Olympics"/>
             </vc:Chart.Titles>
 
-            <vc:Chart.AxesY>
+            <!--<vc:Chart.AxesY>
                 <vc:Axis AxisMinimum="0" AxisMaximum="60" Title="Gold Medals Won"/>
             </vc:Chart.AxesY>
 
@@ -38,7 +38,7 @@
                         <vc:DataPoint AxisXLabel="Japan" YValue="16"/>
                     </vc:DataSeries.DataPoints>
                 </vc:DataSeries>
-            </vc:Chart.Series>
+            </vc:Chart.Series>-->
         </vc:Chart>
     </Grid>
 <!--</column2d>-->
